src/main.scss
/**
 * Klales
 *
 * @author Takuto Yanagida
 * @version 2023-05-18
 */

*,
::before,
::after {
	box-sizing       : border-box;
	background-repeat: no-repeat;
}

* {
	font-family: inherit;
}

:root {
	--margin-block-large : 2rem;
	--margin-block-medium: 1rem;
	--margin-block-small : 0.75rem;

	--font-size-unit: 0.125rem;
	@media screen and (600px <= width) { --font-size-unit: 0.1875rem; }
	@media screen and (900px <= width) { --font-size-unit: 0.25rem; }
}

:where(html) {
	font-family  : system-ui, -apple-system, sans-serif;
	overflow-wrap: break-word;

	line-height: calc(1em + 0.75rem);
	tab-size   : 4;
}

:where(html:focus-within) {
	scroll-behavior: smooth;
}

:where(body) {
	margin: 0;
}

:where(body > :is(header, main, footer)) {
	width        : min(94vw, 48rem);
	margin-inline: auto;
}


// -----------------------------------------------------------------------------


:where(ul, ol, dl, blockquote, pre, figure, table, hr) {
	margin-block: var(--margin-block-large);
}

:where(p, details),
:where(ul, ol, dl) :where(ul, ol, dl) {
	margin-block: var(--margin-block-medium);
}

:where(summary) {
	margin-block-end: var(--margin-block-medium);
}

:where(h1, hgroup:has(h1)) { margin-block: 3.50rem 3.00rem; }
:where(h2, hgroup:has(h2)) { margin-block: 3.00rem 2.50rem; }
:where(h3, hgroup:has(h3)) { margin-block: 2.50rem 2.00rem; }
:where(h4, hgroup:has(h4)) { margin-block: 2.00rem 1.50rem; }
:where(h5, hgroup:has(h5)) { margin-block: 1.50rem 1.25rem; }
:where(h6, hgroup:has(h6)) { margin-block: 1.25rem 1.00rem; }

:where(hgroup > *) {
	margin-block: 0;
}

:where(li, dt) {
	margin-block: var(--margin-block-small);
}

:where(dt + dd) {
	margin-block-start: calc(-1 * var(--margin-block-small));
}

:where(nav li) {
	margin-block: 0;
}

:where(figcaption) {
	margin-block: var(--margin-block-small);
}

:where(caption) {
	padding-block-end: var(--margin-block-small);  // Must use 'padding-block-end'
}


// -----------------------------------------------------------------------------


:where(pre, code, samp, kbd) {
	font-family: Consolas, ui-monospace, monospace;
}

:where(
	h1, h2, h3, h4, h5, h6,
	li, dt, dd, td, th,
	caption, figcaption,
	label, legend
) {
	line-height: calc(1em + 0.5rem);

	font-feature-settings: 'pkna' 1;
}

:where(sub, sup, option) {
	line-height: 1;
}

h1 { font-size: calc(1rem + var(--font-size-unit, 0.25rem) * 6); }
h2 { font-size: calc(1rem + var(--font-size-unit, 0.25rem) * 5); }
h3 { font-size: calc(1rem + var(--font-size-unit, 0.25rem) * 4); }
h4 { font-size: calc(1rem + var(--font-size-unit, 0.25rem) * 3); }
h5 { font-size: calc(1rem + var(--font-size-unit, 0.25rem) * 2); }
h6 { font-size: calc(1rem + var(--font-size-unit, 0.25rem) * 1); }

:where(small, caption, figcaption) {
	font-size: 0.875rem;
}

:where(p, h1, h2, h3, h4, h5, h6) {
	hyphens: auto;
}


// -----------------------------------------------------------------------------


:where(a):where(
	[href*='://'],
	[href$='.doc'i], [href$='.docx'i],
	[href$='.xls'i], [href$='.xlsx'i],
	[href$='.ppt'i], [href$='.pptx'i],
	[href$='.pdf'i], [href$='.zip'i]
)::after {
	display            : inline-block;
	margin-inline-start: 0.25em;

	font-weight: bold;
	line-height: 1;
}

:where(a[href*='://'])::after {
	content    : '↗';
	font-family: Calibri, system-ui;
	font-size  : 85%;
}

:where(a):where(
	[href$='.doc'i], [href$='.docx'i],
	[href$='.xls'i], [href$='.xlsx'i],
	[href$='.ppt'i], [href$='.pptx'i],
	[href$='.pdf'i], [href$='.zip'i]
)::after {
	font-family: inherit;
	font-size  : 75%;
}

:where(a:is([href$='.doc'i], [href$='.docx'i]))::after { content: '[DOC]'; }
:where(a:is([href$='.xls'i], [href$='.xlsx'i]))::after { content: '[XLS]'; }
:where(a:is([href$='.ppt'i], [href$='.pptx'i]))::after { content: '[PPT]'; }
:where(a[href$='.pdf'i])::after { content: '[PDF]'; }
:where(a[href$='.zip'i])::after { content: '[ZIP]'; }


// -----------------------------------------------------------------------------


:where(ul, ol) {
	padding-inline-start: clamp(2rem, calc((100% - 36rem) * 9999), 3rem);
}

:where(dd) {
	margin-inline-start: clamp(2rem, calc((100% - 36rem) * 9999), 3rem);
}

:where(dt),
:where(li)::marker {
	color      : #999;
	font-weight: bold;
}

:where(nav ul) {
	padding-inline-start: 0;
	list-style-type     : none;
}


// -----------------------------------------------------------------------------


:where(strong, b) {
	font-weight: bold;  // For Firefox.
}

:where(cite, dfn) {
	font-style: italic
}

:where(cite a) {
	text-decoration: none;
}

:where(u, ins) {  // Fix underline.
	        text-decoration  : underline solid rgb(0 204 0 / 0.65);
	-webkit-text-decoration  : underline solid rgb(0 204 0 / 0.65);  // For Safari.
	text-decoration-thickness: 2px;  // For Safari.
}

:where(s, strike, del) {
	        text-decoration  : line-through solid rgb(255 68 0 / 0.65);
	-webkit-text-decoration  : line-through solid rgb(255 68 0 / 0.65);  // For Safari.
	text-decoration-thickness: 2px;  // For Safari.
}

:where(code, kbd, samp, var) {
	margin-inline: 0.05em;
}

:where(sub, sup) {
	position      : relative;
	display       : inline-block;  // For neat line height in Safari.
	vertical-align: baseline;
	margin-inline : 0.0625em;
}

:where(sub) {
	inset-block-end : -0.25em;
}

:where(sup) {
	inset-block-start : -0.75em;
}

:where(mark) {
	background-color: rgb(238 238 0 / 0.65);
	outline         : 2px solid rgb(238 238 0 / 0.65);
	color           : #000;
}

:where(abbr[title]) {
	        text-decoration  : underline dotted;
	-webkit-text-decoration  : underline dotted;  // For Safari.
	text-decoration-thickness: 2px;  // For Safari.
	cursor: help;
}

:where(rt) {
	transform: translateY(0.125em);
}


// -----------------------------------------------------------------------------


:where(hr) {
	border            : none;  // For reset
	border-block-start: 2px solid #999;
}

:where(blockquote) {
	margin-inline       : 0;
	padding-inline-start: clamp(2rem, calc((100% - 36rem) * 9999), 3rem);

	font-style: normal;

	position: relative;
}

:where(blockquote)::before {
	content: '';

	position: absolute;
	inset   : 0 auto 0 0;

	border-inline-end: 2px solid #999;

	width: clamp(1.35rem, calc((100% - 36rem) * 9999), 2.35rem);
}

:where(blockquote > cite) {
	display   : block;
	text-align: start;
}

:where(pre) {
	overflow-x : auto;

	background-color: #9993;
	padding         : 1.75rem 2rem;
}

:where(pre > code) {
	background-color: transparent;
	white-space     : pre;
}

:where(address) {  // Fix italic.
	font-style: normal;
}

:where(h1, h2, h3, h4, h5, h6) {
	break-after: avoid;
}

:where(h1, h2, h3, h4, h5, h6) > :where(small) {
	display: block;
}

:where(figure) {
	margin-inline: 0;
	max-width    : 100%;
}

:where(figure) :where(img, picture, iframe) {
	display      : grid;
	margin-inline: auto;
}

:where(figure) > :where(a) {
	display: contents;
}

:where(figcaption) {
	text-align: left;

	margin-inline  : auto;
	max-inline-size: max-content;
	width          : 90%;
}


// -----------------------------------------------------------------------------


:where(img, iframe) {
	break-inside: avoid;
}

:where(img, picture, svg, video, canvas, iframe, embed, object, audio) {
	max-width     : 100%;
	vertical-align: middle;
}

:where(img, picture, svg, video, canvas) {
	height: auto;
}

:where(iframe) {
	border: 0;
}


// -----------------------------------------------------------------------------


:where(table) {
	border-collapse: collapse;

	display   : block;
	overflow-x: auto;
}

:where(thead, tbody, tfoot) {
	border-block: #999 1px solid;
}

:where(td, th) {
	border-block: #999 1px solid;

	padding: 0.5rem;

	text-align    : start;
	vertical-align: top;

	--margin-block-large : 1rem;
	--margin-block-medium: 0.5rem;
	--margin-block-small : 0.5rem;
}

:where(td, th):where(:not(:first-child)) {
	border-inline-start: #999 1px solid;
}

:where(td, th):where(:first-child[rowspan]) {
	border-inline-end: #999 1px solid;
}

:where(td, th) > :first-child {
	margin-block-start: 0;
}

:where(td, th) > :last-child {
	margin-block-end: 0;
}

:where(thead td, th) {
	background-color: #9993;
	font-weight     : bold;
}

:where(caption) {
	text-align: left;

	margin-inline  : auto;
	max-inline-size: max-content;
	width          : min(36rem, 100%);
}


// -----------------------------------------------------------------------------


:where(button, input, select, textarea, [role='button']),
::file-selector-button {
	font-feature-settings: 'pkna' 1;

	font-size  : 0.875rem;
	line-height: 1.15;

	color        : inherit;
	accent-color : #06c;
	border-radius: 0;  // For Safari
}

::placeholder {
	color: #999;
}

:where(fieldset) {
	margin : 0;
	padding: 0.5em 1em 1em;

	border: 1px solid #999;
}

:where(legend) {
	padding-inline: 0.5em;
}

// ----

:where(button, [role='button']),
:where(input:is([type='submit' i], [type='button' i], [type='reset' i])) {
	appearance: none;

	background-color: #9996;
	border          : 1px solid transparent;

	padding: 0.5em 1em;

	display    : inline-grid;
	place-items: center;
}

:where(input[type='submit' i]) {
	font-weight: normal;  // For Safari
}

:where([role='button']) {
	user-select    : none;
	text-decoration: none;
}

// ----

:where(
	input:is(
		[type='text' i],
		[type='password' i],
		[type='url' i],
		[type='email' i],
		[type='tel' i],
		[type='search' i],
		[type='number' i],
		[type='date' i],
		[type='month' i],
		[type='week' i],
		[type='datetime' i],
		[type='datetime-local' i]
	),
	select,
	textarea
) {
	appearance: none;

	background-color: Canvas;
	border          : 1px solid #999;

	padding: 0.5em;
}

// ----

:where(input[type='color' i]) {
	appearance: none;

	background-color: Canvas;
	border          : 1px solid #999;

	min-width     : 3rem;
	min-height    : 2rem;

	padding       : 0.25rem;
	vertical-align: middle;
}

:where(input[type='file' i]) {
	appearance: none;

	background-color: Canvas;
	border          : 1px solid #999;

	display: inline-grid;

	padding           : 2px;
	padding-inline-end: 0.5em;
}

::file-selector-button {
	font-family: inherit;

	background-color: #9996;
	border          : 1px solid transparent;

	padding: calc(0.5em - 2px) 0.5em;
}

:where(input[type='range' i]) {
	vertical-align: middle;
	padding-block : 0.25rem;
}

:where(input):where([type='radio' i], [type='checkbox' i]) {
	margin: 0;

	width : 1em;
	height: 1em;

	translate: 0 -0.1em;  // For Firefox
	@supports (translate: 1lh) {
		translate: 0 calc((1em - 1lh) / 2);
	}
	vertical-align: middle;
}

// ----

:where(select) {
	padding-inline-end: 1.5em;

	background-image   : conic-gradient(from -45deg at 50% 100%, CurrentColor 90deg, transparent 90deg);
	background-position: calc(100% - 0.25em);
	background-size    : 0.6em 0.25em;
}

:where(optgroup) {
	font-style: normal;
}

:where(option) {
	min-height: unset;
}

:where(textarea) {
	vertical-align: top;
}

// ----

:where(button, input, select, textarea, [role='button']):where(:disabled, [disabled]) {
	cursor : not-allowed;
	opacity: 0.5;
}


// -----------------------------------------------------------------------------


:where(details[open]) {
	position: relative;
	z-index : 0;
}

:where(details[open])::before {
	content : '';
	position: absolute;
	inset   : 2rem auto 0 0;
	z-index : -1;

	border-inline-start: 0.75rem solid #9993;
}

:where(details) > :nth-child(2) {
	margin-block-start: 0;
}

:where(summary) {
	display    : list-item;
	cursor     : pointer;
	user-select: none;
}

:focus-visible {
	outline-color: rgba(#07f, 0.6);
}


@media (prefers-reduced-motion: reduce) {
	html:focus-within {
		scroll-behavior: auto;
	}
	*,
	::before,
	::after {
		animation-duration       : 0.01ms !important;
		animation-iteration-count: 1      !important;
		transition-duration      : 0.01ms !important;
		scroll-behavior          : auto   !important;
	}
}

